--- a/project3.html
+++ b/project3.html
@@ -4,27 +4,49 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project 3 - React and Node.js Application</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
-      <nav class="navbar">
-        <a href="index.html" class="logo">Cody Ackerson</a>
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+          <a class="navbar-brand fs-4" href="index.html">Cody Ackerson</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse fw-bolder fs-4" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html#about">About Me</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="index.html#projects">Projects</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="index.html#contact">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </nav>
     </header>
-    <main>
-      <section>
-        <h1>React and Node.js Application</h1>
-        <img
-          src="/automation-test/images/Full-stack.webp"
-          alt="React and Node.js Application"
-          style="width: 100%; border-radius: 8px"
-        />
-        <p>
-          Designed a scalable full-stack application leveraging React for the
-          frontend and Node.js for the backend.
-        </p>
-      </section>
+    <main class="container">
+      <div class="card shadow">
+        <section class="card-body">
+          <h1 class="card-title">React and Node.js Application</h1>
+          <img
+            src="images/Full-stack.webp"
+            alt="React and Node.js Application"
+            class="img-fluid rounded"
+            style="width: 25%;"
+          />
+          <p class="card-text">
+            Designed a scalable full-stack application leveraging React for the
+            frontend and Node.js for the backend.
+          </p>
+        </section>
+      </div>
     </main>
   </body>
 </html>
