--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand fs-4" href="#">Cody Ackerson Made this change</a>
+                <a class="navbar-brand fs-4" href="#">Cody Ackerson</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -20,6 +20,9 @@
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
                             <a class="nav-link " href="#about">About Me</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#enjoys">Enjoys</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#projects">Projects</a>
@@ -43,6 +46,20 @@
                     <li>Backend development using PHP and Node.js</li>
                     <li>Mobile app development with Kotlin</li>
                     <li>Linux administration and networking with Cisco devices</li>
+                </ul>
+                <p class="card-text">With a passion for creating efficient and scalable solutions, I thrive in delivering impactful projects that solve complex problems.</p>
+            </section>
+        </div>
+
+        <div class="card shadow">
+            <section id="enjoys" class="card-body">
+                <h1 class="card-title">Most Enjoys</h1>
+                <p class="card-text">Well coding is great but I most enjoy:</p>
+                <ul>
+                    <li>Backend development using PHP (Laravel)</li>
+                    <li>Kotlin is Kool - Check out the MultiPlatform! All Your Device Are Belong To Us  </li>
+                    <li>Short walks to the ski lift</li>
+                    <li>Making things with wood</li>
                 </ul>
                 <p class="card-text">With a passion for creating efficient and scalable solutions, I thrive in delivering impactful projects that solve complex problems.</p>
             </section>
